# ai-habits

./: .gitignore  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
src/ai_habits/: __init__.py  cli.py  config.py
src/ai_habits/auditors/: __init__.py  claude_md_auditor.py  feature_auditor.py  skill_auditor.py
src/ai_habits/data/: mcp_catalog.json  skills_catalog.json
src/ai_habits/generators/: __init__.py  claude_md_patch.py  report.py  script_generator.py  skill_generator.py
src/ai_habits/patterns/: __init__.py  anti_patterns.py  classifier.py  clustering.py
src/ai_habits/scanners/: __init__.py  base.py  claude_code.py
src/ai_habits/utils/: __init__.py  embeddings.py  groq_llm.py  llm.py
tests/: test_scanner.py
